--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Register</title>
 </head>
 <body>
+  <div class="m-5">
     <h1>Formulario de registros</h1>
+    <div class="input-group mb-3 d-flex justify-content-center" style="width: 48%;">
+      <span class="input-group-text" id="basic-addon1">@</span>
+      <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
+    </div>
+    <div class="input-group mb-3" style="width: 48%;">
+      <input type="password" class="form-control" placeholder="Password" aria-label="Password" aria-describedby="basic-addon2">
+      <span class="input-group-text" id="basic-addon2">Password</span>
+    </div>
+    <button action="/testPost" type="button" class="btn btn-success mb-3">Registrar</button>
+    <a th:href="@{/}"><button type="button" class="btn btn-danger mb-3">Home</button></a>
+  </div>
 </body>
 </html>
