--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -10,16 +10,23 @@
 <body>
   <div class="m-5">
     <h1>Formulario de registros</h1>
-    <div class="input-group mb-3 d-flex justify-content-center" style="width: 48%;">
-      <span class="input-group-text" id="basic-addon1">@</span>
-      <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
-    </div>
-    <div class="input-group mb-3" style="width: 48%;">
-      <input type="password" class="form-control" placeholder="Password" aria-label="Password" aria-describedby="basic-addon2">
-      <span class="input-group-text" id="basic-addon2">Password</span>
-    </div>
-    <button action="/testPost" type="button" class="btn btn-success mb-3">Registrar</button>
+    <form action="/testPost" method="POST">
+      <input type="hidden"
+      th:name="${_csrf.parameterName}"
+	    th:value="${_csrf.token}"/>
+      <div class="input-group mb-3 d-flex justify-content-center" style="width: 48%;">
+        <span class="input-group-text" id="basic-addon1">@</span>
+        <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1" name="username">
+      </div>
+      <div class="input-group mb-3" style="width: 48%;">
+        <input type="password" class="form-control" placeholder="Password" aria-label="Password" aria-describedby="basic-addon2" name="password">
+        <span class="input-group-text" id="basic-addon2">Password</span>
+      </div>
+      <button type="submit"  class="btn btn-success mb-3">Registrar</button>
+    </form>
     <a th:href="@{/}"><button type="button" class="btn btn-danger mb-3">Home</button></a>
   </div>
 </body>
 </html>
+
+<script th:src="@{/js/register.js}"></script>
