--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -25,8 +25,10 @@
       <button type="submit"  class="btn btn-success mb-3">Registrar</button>
     </form>
     <a th:href="@{/}"><button type="button" class="btn btn-danger mb-3">Home</button></a>
+
+    <form action="/findAll" method="GET">
+      <button type="submit"  class="btn btn-info mb-3">Buscar</button>
+    </form>
   </div>
 </body>
 </html>
-
-<script th:src="@{/js/register.js}"></script>
