--- a/src/main/resources/templates/consulta.html
+++ b/src/main/resources/templates/consulta.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="m-5">
-    <a th:href="@{/register}"><button type="button" class="btn btn-danger mb-3">← Register</button></a>
+    <a th:href="@{/register}"><button type="button" class="btn btn-danger mb-3">← Regresar</button></a>
     <h1>Consultar Usuarios</h1>
     <table class="table table-success table-striped table-hover">
       <thead>
@@ -17,6 +17,7 @@
           <th scope="col"># ID</th>
           <th scope="col">Name</th>
           <th scope="col">Password</th>
+          <th scope="col">Eliminar</th>
         </tr>
       </thead>
       <tbody>
@@ -24,6 +25,7 @@
           <td th:text="${user.id}"></td>
           <td th:text="${user.name}"></td>
           <td th:text="${user.password}"></td>
+          <td><button type="button" class="btn btn-danger mb-3">Eliminar</button></td>
         </tr>
       </tbody>
     </table>
