--- a/src/main/resources/templates/consulta.html
+++ b/src/main/resources/templates/consulta.html
@@ -26,7 +26,12 @@
           <td th:text="${user.name}"></td>
           <td th:text="${user.password}"></td>
           <td>
-            <form action="/{id}" method="DELETE"><button type="button" class="btn btn-danger mb-3">Eliminar</button></form></td>
+            <form th:action="@{/delete}" method="post">
+              <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+              <input type="hidden" name="name" th:value="${user.name}">
+              <button type="submit" class="btn btn-danger mb-3">Eliminar</button>
+            </form>
+          </td>
         </tr>
       </tbody>
     </table>
