--- a/src/main/resources/templates/consulta.html
+++ b/src/main/resources/templates/consulta.html
@@ -14,7 +14,6 @@
     <table class="table table-success table-striped table-hover">
       <thead>
         <tr>
-          <th scope="col"># ID</th>
           <th scope="col">Name</th>
           <th scope="col">Password</th>
           <th scope="col">Eliminar</th>
@@ -22,13 +21,12 @@
       </thead>
       <tbody>
         <tr th:each="user : ${users}">
-          <td th:text="${user.id}"></td>
-          <td th:text="${user.name}"></td>
+          <td th:text="${user.username}"></td>
           <td th:text="${user.password}"></td>
           <td>
             <form th:action="@{/delete}" method="post">
               <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-              <input type="hidden" name="name" th:value="${user.name}">
+              <input type="hidden" name="name" th:value="${user.username}">
               <button type="submit" class="btn btn-danger mb-3">Eliminar</button>
             </form>
           </td>
